feat(actions): allow to manually run workflow

--- a/.github/workflows/update-calendar.yaml
+++ b/.github/workflows/update-calendar.yaml
@@ -1,6 +1,7 @@
 name: Update Riftbound Calendar Daily
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: '0 4 * * *' # Runs daily at 4:00 AM UTC
 
